--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,15 @@ xcode_destination: platform=iOS Simulator, OS=12.4, name=iPhone XR
 
 cache:
   directories:
-  - Carthage
+  - Source/Carthage
 
 addons:
   homebrew:
     packages:
       - carthage
       #update: true #if needed
+
+before_script: cd Source
 
 # FIXME: install carthage directly rather than using brew.
 before_install:
