--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ osx_image: xcode10.3
 language: swift
 xcode_project: Source/Trailhead.xcodeproj
 xcode_scheme: Trailhead
-xcode_destination: platform=iOS Simulator, OS=12.4, name=iPhone XR
+xcode_destination: platform=iOS Simulator,OS=12.4,name=iPhone XR
 cache:
   directories:
   - Source/Carthage
@@ -15,7 +15,7 @@ addons:
 before_install:
 - cd Source
 - carthage update --cache-builds
-- carthage bootstrap --platform iOS --verbose --no-use-binaries --platform iOS --cache-builds
+- carthage bootstrap --platform iOS --verbose --no-use-binaries --cache-builds
 
 env:
   global:
