Temporarily try to update docs on any branch.

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,8 +29,8 @@ deploy:
   skip-cleanup: true
   keep-history: true
   local-dir: Documentation/Jazzy
-  on:
-    branch: develop
+#  on:
+#    branch: develop
 
 env:
   global:
