--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ deploy:
   skip-cleanup: true
   keep-history: true
   github-token: $GITHUB_ACCESS_TOKEN
-  local-dir: Documentation/Jazzy
+  local-dir: Documentation
   on:
     branch: feature/5_IntegrateJazzyWithGithubPages
 
