--- a/.travis.yml
+++ b/.travis.yml
@@ -19,13 +19,10 @@ before_install:
 - carthage bootstrap --platform iOS --verbose --no-use-binaries --cache-builds
 
 after_success:
-  - set -x
   - bash <(curl -s https://codecov.io/bash)
   - gem install jazzy
   - cd ..
-  - pwd
   - ./gendocs_jazzy.sh
-  - ls
 
 deploy:
   provider: pages
@@ -34,7 +31,7 @@ deploy:
   github-token: $GITHUB_ACCESS_TOKEN
   local-dir: Documentation
   on:
-    branch: feature/5_IntegrateJazzyWithGithubPages
+    branch: develop
 
 env:
   global:
