--- a/.codecov.yml
+++ b/.codecov.yml
@@ -3,8 +3,8 @@ codecov:
     require_ci_to_pass: yes
 
 ignore:
-  - "UnitTests/.*"
-  - "IntegrationTests/.*"
+  - "Source/UnitTests/.*"
+  - "Source/IntegrationTests/.*"
 
 coverage:
   precision: 2
